--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 
     </section>
 
-    <script src="script.js">
-        import app from './server.js';
-    </script>
+    <script src="script.js"></script>
     
 </body>
 </html>
